RESOLVED FIXED58805
If deleting the StorageTracker.db file fails, local storage is left in a strange state
https://bugs.webkit.org/show_bug.cgi?id=58805
Summary If deleting the StorageTracker.db file fails, local storage is left in a stra...
Jessie Berlin
Reported 2011-04-18 12:02:17 PDT
There are no .localstorage files left, but the StorageTracker.db thinks that there are still websites with local storage. <rdar://problem/9204492>
Attachments
Patch (3.94 KB, patch)
2011-04-18 13:33 PDT, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2011-04-18 13:33:18 PDT
Jessie Berlin
Comment 2 2011-04-18 16:35:44 PDT
Note You need to log in before you can comment on or make changes to this bug.