If deleting the StorageTracker.db file fails, local storage is left in a strange state. https://bugs.webkit.org/show_bug.cgi?id=58805

Reviewed by Steve Falkenburg.

* storage/StorageTracker.cpp:
(WebCore::StorageTracker::syncFileSystemAndTrackerDatabase):
When cleaning up the StorageTracker.db file, is not enough to call syncDeleteOrigin.
deleteOrigin itself must be called to update the data structures that syncDeleteOrigin
depends on and to prevent clashes between a theoretical web page editing local storage
at the same time this method is called.
(WebCore::StorageTracker::syncDeleteAllOrigins):
If it is not possible to delete the StorageTracker.db file, empty it.
(WebCore::StorageTracker::deleteOriginOnMainThread):
Wrapper for deleteOrigin.
* storage/StorageTracker.h:



Canonical link: https://commits.webkit.org/73948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84208 268f45cc-cd09-0410-ab3c-d52691b4dbfc